--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,10 +9,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;500&display=swap" rel="stylesheet">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
+
 <body>
     <nav>
         <div class="name">
-            <h2>Nowshin Sharmili</h2>
+            <h2>Nowshin Sharmili Web</h2>
         </div>
         <div class="options">
             <a href=""> About</a>
@@ -68,8 +70,10 @@
 
                     </div>
                     <div class="des">
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium tenetur in, quas veritatis fugit quisquam quidem qui dolorem fuga modi temporibus sapiente ex aliquam, nulla, nam reiciendis corrupti aliquid ipsum.</p>
-            </div>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium tenetur in, quas
+                            veritatis fugit quisquam quidem qui dolorem fuga modi temporibus sapiente ex aliquam, nulla,
+                            nam reiciendis corrupti aliquid ipsum.</p>
+                    </div>
                 </div>
             </div>
         </section>
@@ -84,72 +88,86 @@
                 <div class="expBox">
                     <h4>Frontend Development</h4>
                     <div class="grid">
-                    <div class="points">
-                        <span><i class='bx bxs-badge-check'></i>
-                        </span>
-                        <div><h4>HTML</h4>
-                            <p>Experienced</p></div>
-                    </div>
-                    <div class="points">
-                        <span><i class='bx bxs-badge-check'></i></span>
-                        <div><h4>CSS</h4>
-                            <p>Experienced</p></div>
-                    </div>
-                    <div class="points">
-                        <span><i class='bx bxs-badge-check'></i></span>
-                        <div>
-                            <h4>SASS</h4>
-                        <p>Basic</p>
+                        <div class="points">
+                            <span><i class='bx bxs-badge-check'></i>
+                            </span>
+                            <div>
+                                <h4>HTML</h4>
+                                <p>Experienced</p>
+                            </div>
+                        </div>
+                        <div class="points">
+                            <span><i class='bx bxs-badge-check'></i></span>
+                            <div>
+                                <h4>CSS</h4>
+                                <p>Experienced</p>
+                            </div>
+                        </div>
+                        <div class="points">
+                            <span><i class='bx bxs-badge-check'></i></span>
+                            <div>
+                                <h4>SASS</h4>
+                                <p>Basic</p>
+                            </div>
+                        </div>
+                        <div class="points">
+                            <span><i class='bx bxs-badge-check'></i></span>
+                            <div>
+                                <h4>JAVASCRIPT</h4>
+                                <p>Intermediate</p>
+                            </div>
+                        </div>
+                        <div class="points">
+                            <span><i class='bx bxs-badge-check'></i></span>
+                            <div>
+                                <h4>TypeScript</h4>
+                                <p>Intermediate</p>
+                            </div>
+                        </div>
+                        <div class="points">
+                            <span><i class='bx bxs-badge-check'></i></span>
+                            <div>
+                                <h4>Material UI</h4>
+                                <p>Intermediate</p>
+                            </div>
                         </div>
                     </div>
-                    <div class="points">
-                        <span><i class='bx bxs-badge-check'></i></span>
-                        <div><h4>JAVASCRIPT</h4>
-                            <p>Intermediate</p></div>
-                    </div>
-                    <div class="points">
-                        <span><i class='bx bxs-badge-check'></i></span>
-                        <div><h4>TypeScript</h4>
-                            <p>Intermediate</p></div>
-                    </div>
-                    <div class="points">
-                        <span><i class='bx bxs-badge-check'></i></span>
-                        <div><h4>Material UI</h4>
-                            <p>Intermediate</p></div>
+                </div>
+                <!-- 2nd box -->
+                <div class="expBox">
+                    <h4>Backend Development</h4>
+                    <div class="grid">
+                        <div class="points">
+                            <span><i class='bx bxs-badge-check'></i>
+                            </span>
+                            <div>
+                                <h4>PostgreSQL</h4>
+                                <p>Experienced</p>
+                            </div>
+                        </div>
+                        <div class="points">
+                            <span><i class='bx bxs-badge-check'></i></span>
+                            <div>
+                                <h4>Git</h4>
+                                <p>Experienced</p>
+                            </div>
+                        </div>
+                        <div class="points">
+                            <span><i class='bx bxs-badge-check'></i></span>
+                            <div>
+                                <h4>Node JS</h4>
+                                <p>Basic</p>
+                            </div>
+                        </div>
+                        <div class="points">
+                            <span><i class='bx bxs-badge-check'></i></span>
+                            <div>
+                                <h4>Express JS</h4>
+                                <p>Intermediate</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                </div>
-<!-- 2nd box -->
-<div class="expBox">
-    <h4>Backend Development</h4>
-    <div class="grid">
-    <div class="points">
-        <span><i class='bx bxs-badge-check'></i>
-        </span>
-        <div>
-            <h4>PostgreSQL</h4>
-            <p>Experienced</p>
-        </div>
-    </div>
-    <div class="points">
-        <span><i class='bx bxs-badge-check'></i></span>
-        <div><h4>Git</h4>
-            <p>Experienced</p></div>
-    </div>
-    <div class="points">
-        <span><i class='bx bxs-badge-check'></i></span>
-        <div>
-            <h4>Node JS</h4>
-        <p>Basic</p>
-        </div>
-    </div>
-    <div class="points">
-        <span><i class='bx bxs-badge-check'></i></span>
-        <div><h4>Express JS</h4>
-            <p>Intermediate</p></div>
-    </div>
-</div>
-</div>
             </div>
         </section>
         <!-- 4th section -->
@@ -164,53 +182,53 @@
                     <img src="./img/project-1 (1).png" alt="" class="projectImg">
                     <h2>Project one</h2>
                     <div class="btnGroup">
-                       <button class="btn btn1">GitHub</button>
-                       <button class="btn btn1">Live Demo</button>
+                        <button class="btn btn1">GitHub</button>
+                        <button class="btn btn1">Live Demo</button>
                     </div>
                 </div>
-           <!-- 2nd project box -->
-           <div class="projectBox">
-            <img src="./img/project-2.png" alt="" class="projectImg">
-            <h2>Project two</h2>
-            <div class="btnGroup">
-                <button class="btn btn1">GitHub</button>
-                    <button class="btn btn1">Live Demo</button>
-            </div>
-        </div>
-        <!-- 3rd project box -->
-        <div class="projectBox">
-            <img src="./img/project-3.png" alt="" class="projectImg">
-            <h2>Project three</h2>
-            <div class="btnGroup">
-                <button class="btn btn1">GitHub</button>
-                    <button class="btn btn1">Live Demo</button>
-            </div>
-        </div>
+                <!-- 2nd project box -->
+                <div class="projectBox">
+                    <img src="./img/project-2.png" alt="" class="projectImg">
+                    <h2>Project two</h2>
+                    <div class="btnGroup">
+                        <button class="btn btn1">GitHub</button>
+                        <button class="btn btn1">Live Demo</button>
+                    </div>
+                </div>
+                <!-- 3rd project box -->
+                <div class="projectBox">
+                    <img src="./img/project-3.png" alt="" class="projectImg">
+                    <h2>Project three</h2>
+                    <div class="btnGroup">
+                        <button class="btn btn1">GitHub</button>
+                        <button class="btn btn1">Live Demo</button>
+                    </div>
+                </div>
             </div>
         </section>
         <!-- 5th section -->
-       <section class="container">
-        <div class="title">
-            <p>Get in touch</p>
-            <h3>Contact Me</h3>
-        </div>
-        <div class="contactbox">
-            <div class="conticon">
-                <span>
-                    <i class='bx bxs-envelope'></i>
-                </span>
-                <a href="">Example@email.com</a>
+        <section class="container">
+            <div class="title">
+                <p>Get in touch</p>
+                <h3>Contact Me</h3>
             </div>
-            <div class="conticon">
-                <span>
-                    <i class='bx bxl-linkedin-square'></i>
-                </span>
-                <a href="">LinkedIn</a>
-            
-            </div>
-        </div>
+            <div class="contactbox">
+                <div class="conticon">
+                    <span>
+                        <i class='bx bxs-envelope'></i>
+                    </span>
+                    <a href="">Example@email.com</a>
+                </div>
+                <div class="conticon">
+                    <span>
+                        <i class='bx bxl-linkedin-square'></i>
+                    </span>
+                    <a href="">LinkedIn</a>
 
-       </section>
+                </div>
+            </div>
+
+        </section>
     </main>
     <!-- footer -->
     <footer>
@@ -220,9 +238,10 @@
             <a href="">Projects</a>
             <a href="">Contact</a>
         </div>
-        <p >
+        <p>
             Copyright &copy 2023 Nowshin Sharmili.All Rights Reserved.
         </p>
     </footer>
 </body>
+
 </html>
